Cleanups and fixes for orientation in QxBox, added QxHBox and QxVBox as simple extended QxBoxes, minor cleanups in QxAtom, added horizontalAlign property to QxWidget, removed property group align
git-svn-id: https://qooxdoo.svn.sourceforge.net/svnroot/qooxdoo/trunk/qooxdoo@249 61aaf1ca-a10e-0410-b9fb-ac63ec25887f

--- a/source/style/widgets.css
+++ b/source/style/widgets.css
@@ -1199,11 +1199,15 @@ html[QxFocused] {
   ------------------------------------------
 */
 
-.QxBox{
+.QxBox, 
+.QxHBox,
+.QxVBox{
   position: absolute; 
   overflow: hidden;
 }
 
-.QxBox{
+.QxBox,
+.QxHBox,
+.QxVBox{
   overflow: -moz-scrollbars-none;
 }
